--- a/santander_coders.ipynb
+++ b/santander_coders.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Por limtação de daos e recursos, será apresentada uma metodologia de como chegar a uma possível resposta que seja proxima à realidade."
+    "1. Por limitação de dados e recursos, será apresentada uma metodologia de como chegar a uma possível resposta que seja proxima à realidade."
    ]
   },
   {
@@ -103,12 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "341391617.6\n"
+     ]
+    }
+   ],
    "source": [
     "consumo_total_Kg = consumo_total / 100\n",
-    "print(consumo_total_Kg)"
+    "print(consumo_total_Kg)\n"
    ]
   },
   {
@@ -154,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Portanto, para este cenário, a qresposta seria: 34139161760.000004"
+    "Portanto, para este cenário, a resposta seria: 34.139.161.760.000004"
    ]
   },
   {
